# live-wallpaper

./: .gitignore  pyproject.toml
live_wallpaper/: __main__.py  config.py  default_config.json  service.py  wallpaper.py
live_wallpaper/lib/: __init__.py  _requests.py  bash.py  config.py  current_user.py  log.py  path.py  time.py  utils.py
live_wallpaper/module/: __init__.py  base.py  himawari8.py
